--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,10 +1,12 @@
 .home {
     width: 100%;
-    min-height: 100vh;
-
+    min-height: 87vh;
+    
     display: flex;
     align-items: center;
     justify-content: center;
+
+    border: 1px solid blue;
 }
 
 .home input {
