--- a/src/pages/Sentinela/Sentinela.module.css
+++ b/src/pages/Sentinela/Sentinela.module.css
@@ -15,6 +15,7 @@
     height: 30px;
     background-color: white;
     margin-bottom: 5px;
+    cursor: pointer;
 
     border: 1px solid black;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.509);
