--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,12 +21,16 @@
 
 .header figure {
     display: flex;
+
+    
 }
 
 .header img {
     height: 35px;
-    margin: 5px;
+    margin: 0px;
     cursor: pointer;
+
+    
 }
 
 .header a {
@@ -39,19 +43,54 @@
     color: var(--primaria);
 }
 
-.menuButton {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 25px;
-    width: 30px;
-    cursor: pointer;
-    margin: 10px;
+@media (max-width: 768px) {
+
+    .menuButton {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 25px;
+        width: 30px;
+        cursor: pointer;
+        margin: 10px;
+    }
+    
+    .linha {
+        height: 2px;
+        width: 100%;
+        background-color: black;
+    }
+
+    .menuSandwich {
+        display: none;
+    }
+
+    .show {
+        display: flex;
+        width: 50%;
+        height: auto;
+        position: absolute;
+        top: 50px;
+        right: 0;
+        border: 1px solid black;
+        background-color: white;
+        flex-direction: column;
+        padding: 20px;
+        gap: 1rem;
+    }
+}
+
+@media (max-width: 360px) {
+    .show{
+        width: 100%;
+    }
+
+    .paginas {
+        display: flex;
+        
+
+        border: 1px solid blue;
+    }
 }
 
 
-.linha {
-    height: 2px;
-    width: 100%;
-    background-color: black;
-}
