--- a/src/pages/Sentinela/Sentinela.module.css
+++ b/src/pages/Sentinela/Sentinela.module.css
@@ -6,11 +6,10 @@
     justify-content: center;
     flex-direction: column;
 
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
-
-.temas button{
+.temas h3{
     width: 100%;
     height: 30px;
     background-color: white;
@@ -20,3 +19,10 @@
     border: 1px solid black;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.509);
 }
+
+
+
+
+
+
+
