--- a/src/components/Abordagem/Abordagem.module.css
+++ b/src/components/Abordagem/Abordagem.module.css
@@ -6,7 +6,7 @@
     justify-content: center;
     flex-direction: column;
 
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .abordagem {
@@ -20,13 +20,12 @@
 }
 
 .comabordagem{
-    width: auto;
-    height: auto;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
 
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
 .semabordagem {
@@ -58,7 +57,7 @@
 
     margin-top: 30px;
 
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
 .semsuperficial, .semprofundo{
