--- a/src/pages/Sentinela/Sentinela.module.css
+++ b/src/pages/Sentinela/Sentinela.module.css
@@ -1,17 +1,19 @@
-.temas {
-    width: 90%;
+.temas a{
+    width: 100%;
 
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 
+    padding-bottom: 5px;
+    padding-top: 10px;
     /* border: 1px solid red; */
 }
 
 .temas h3{
-    width: 100%;
-    height: 30px;
+    width: auto;
+    height: auto;
     background-color: white;
     margin-bottom: 5px;
     cursor: pointer;
@@ -20,6 +22,15 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.509);
 }
 
+p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+ul {
+    list-style: none;
+}
 
 
 
