--- a/src/pages/Sentinela/Sentinela.module.css
+++ b/src/pages/Sentinela/Sentinela.module.css
@@ -1,4 +1,4 @@
-.temas a{
+/* .temas a{
     width: 100%;
 
     display: flex;
@@ -8,10 +8,10 @@
 
     padding-bottom: 5px;
     padding-top: 10px;
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
 
-.temas h3{
+.temas {
     width: auto;
     height: auto;
     background-color: white;
@@ -20,17 +20,9 @@
 
     border: 1px solid black;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.509);
-}
+} */
 
-p {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-ul {
-    list-style: none;
-}
 
 
 
