--- a/src/components/Assunto/Assunto.module.css
+++ b/src/components/Assunto/Assunto.module.css
@@ -1,4 +1,4 @@
-.assunto {
+/* .assunto {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -9,4 +9,4 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 15px;
-}
+} */
