--- a/src/pages/Sal/Sal.module.css
+++ b/src/pages/Sal/Sal.module.css
@@ -6,16 +6,5 @@
     justify-content: center;
     flex-direction: column;
 
-    border: 1px solid red;
-}
-
-
-.temas button{
-    width: 100%;
-    height: 30px;
-    background-color: white;
-    margin-bottom: 5px;
-
-    border: 1px solid black;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.509);
+    /* border: 1px solid red; */
 }
