--- a/src/pages/Sal/Sal.module.css
+++ b/src/pages/Sal/Sal.module.css
@@ -1,10 +1,10 @@
-.temas {
-    width: 90%;
-
+.assuntos {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-wrap: wrap;
 
-    /* border: 1px solid red; */
+    width: 100%;
+
+    border: 1px solid red;
 }
