Adicionando conteúdo e estilizando Sobre, e Ajuda

--- a/src/pages/Sal/Sal.module.css
+++ b/src/pages/Sal/Sal.module.css
@@ -1,3 +1,9 @@
+.sal h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .assuntos {
     display: flex;
     align-items: center;
