--- a/src/pages/Sentinela/Sentinela.module.css
+++ b/src/pages/Sentinela/Sentinela.module.css
@@ -1,3 +1,9 @@
+.sentinela h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .assuntos {
     display: flex;
     align-items: center;
