--- a/src/pages/Farol/Farol.module.css
+++ b/src/pages/Farol/Farol.module.css
@@ -1,3 +1,10 @@
+.farol h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 .assuntos {
     display: flex;
     align-items: center;
