--- a/src/pages/Sobre/Sobre.module.css
+++ b/src/pages/Sobre/Sobre.module.css
@@ -1,11 +1,37 @@
-h1, h2, h3 {
+h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
-h1 {
+.endereco {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
     padding-top: 100px;
     padding-bottom: 100px;
+
+    border: 1px solid red;
+}
+
+.midias {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 50px;
+
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    border: 1px solid red;
+}
+
+.midia {
+    display: flex;
+    gap: 100px;
+    
+    border: 1px solid blue;
 }
