Estilização paginas Card, sentinela, farol, sal

--- a/src/pages/Ajuda/Ajude.module.css
+++ b/src/pages/Ajuda/Ajude.module.css
@@ -1,7 +1,46 @@
+.ajuda {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    width: 95%;
+
+    /* border: 1px solid red; */
+}
+.ajuda h2 {
+    padding: 50px;
+}
+
+.contatos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+
+    width: 100%;
+
+    /* border: 1px solid red; */
+}
+
 .emergencia, .divulga, .pastoral {
     display: flex;
     align-items: center;
     flex-direction: column;
 
-    border: 1px solid red;
+    border: 1px solid black;
+}
+
+.ajuda h3 {
+    border-bottom: 1px solid black;
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.ajuda p {
+    padding: 5px;
 }
