--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -7,42 +7,39 @@
 } */
 
 .assuntos {
-    width: 400px;
-    height: 275px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    border: 1px solid red;
+    width: 322px;
+    height: 266px;
+
+    /* border: 1px solid red; */
 }
 
 .link {
-
     display: flex;
     align-items: center;
     justify-content: center;
-
-    width: 100%;
-
-    padding-bottom: 5px;
-    padding-top: 10px;
 
     /* border: 1px solid blue; */
 }
 
 .titulo {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
 
-    height: auto;
-    background-color: white;
+    width: 90%;
+    margin-top: 5px;
     margin-bottom: 5px;
-    cursor: pointer;
+    font-size: 1.125rem;
 
-    border: 1px solid black;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.509);
+    /* border: 1px solid black; */
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.509); */
 }
-p {
+.assuntos p {
     display: flex;
     justify-content: center;
 
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
