--- a/src/pages/Farol/Farol.module.css
+++ b/src/pages/Farol/Farol.module.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    padding: 50px;
 }
 
 
@@ -10,8 +12,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 20px;
 
     width: 100%;
-
-    border: 1px solid red;
 }
