--- a/src/pages/Sal/Sal.module.css
+++ b/src/pages/Sal/Sal.module.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    padding: 50px;
 }
 
 .assuntos {
@@ -9,8 +11,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 20px;
 
     width: 100%;
-
-    border: 1px solid red;
 }
