--- a/src/pages/Sobre/Sobre.module.css
+++ b/src/pages/Sobre/Sobre.module.css
@@ -1,7 +1,20 @@
-h1 {
+.sobre {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    width: 100%;
+    /* border: 1px solid red; */
+}
+
+.sobre h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    padding: 50px;
+
+    /* border: 1px solid red; */
 }
 
 .endereco {
@@ -12,26 +25,33 @@ h1 {
     padding-top: 100px;
     padding-bottom: 100px;
 
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .midias {
-
     display: flex;
     align-items: center;
-    justify-content: center;
+    position: absolute;
+    bottom: 0;
     flex-direction: column;
     gap: 50px;
 
     padding-top: 100px;
     padding-bottom: 100px;
 
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .midia {
     display: flex;
     gap: 100px;
+
+    font-size: 2rem;
     
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
+}
+
+.midia a {
+    text-decoration: none;
+    color: black;
 }
