--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -87,9 +87,8 @@
 
     .paginas {
         display: flex;
-        
 
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
     }
 }
 
